--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+main {
+    height: 100vh;
+    background-color: rgba(217, 219, 212, 1);
+    background-image: linear-gradient(to bottom, rgba(0, 150, 136, 1) 0%, rgba(0, 150, 136, 1) 10%, rgba(217, 219, 212, 1) 10%, rgba(217, 219, 212, 1) 100vh);
+}
