--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,11 @@ main {
     background-color: rgba(217, 219, 212, 1);
     background-image: linear-gradient(to bottom, rgba(0, 150, 136, 1) 0%, rgba(0, 150, 136, 1) 10%, rgba(217, 219, 212, 1) 10%, rgba(217, 219, 212, 1) 100vh);
 }
+
+#left,
+#right{
+    background-color: white;
+    width: 100%;
+    height: 50px;
+    border: 1px solid black;
+}
