--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,25 @@ main {
 #right{
     background-color: white;
     width: 100%;
-    height: 50px;
+    height: 350px;
     border: 1px solid black;
 }
+
+.section-top{
+    height: 15%;
+    background-color: aquamarine;
+}
+
+.section-main{
+    height: 85%;
+}
+
+.section-center{
+    height: 70%;
+}
+
+.section-bottom{
+    height: 15%;
+    background-color: aquamarine;
+}
+
