--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ main {
 #right{
     background-color: white;
     width: 100%;
-    height: 350px;
+    height: 300px;
     border: 1px solid black;
 }
 
@@ -23,16 +23,22 @@ main {
     background-color: aquamarine;
 }
 
-.section-main{
-    height: 85%;
+.section-big-top{
+    height: 30%;
+    background-color: rgb(127, 240, 255);
 }
 
 .section-center{
     height: 70%;
+    overflow-y: scroll;
 }
 
 .section-bottom{
     height: 15%;
-    background-color: aquamarine;
+    background-color: rgb(172, 127, 255);
 }
 
+.bg-image{
+    background-image: url(../img/mine.jpg);
+    background-repeat: repeat;
+}
