--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 main {
-    height: 100vh;
+    height: 100%;
     background-color: rgba(217, 219, 212, 1);
     background-image: linear-gradient(to bottom, rgba(0, 150, 136, 1) 0%, rgba(0, 150, 136, 1) 10%, rgba(217, 219, 212, 1) 10%, rgba(217, 219, 212, 1) 100vh);
 }
@@ -14,35 +14,35 @@ main {
 #right{
     background-color: white;
     width: 100%;
-    height: 300px;
+    height: 500px;
     border: 1px solid black;
 }
 
 .section-top{
-    height: 15%;
+    height: 50px;
 }
 
 .section-alert{
-    height: 15%;
+    height: 50px;
 }
 
 .section-search{
-    height: 10%;
+    height: 40px;
 }
 
 .section-main{
-    height: 60%;
+    height: calc(100% - 140px);
     overflow-y: scroll;
 }
 
 
 .section-center{
-    height: 70%;
+    height: calc(100% - 100px);
     overflow-y: scroll;
 }
 
 .section-bottom{
-    height: 15%;
+    height: 50px;
 }
 
 .bg-image{
