--- a/css/style.css
+++ b/css/style.css
@@ -54,11 +54,6 @@ main {
     background-color: rgb(235, 235, 235);
 }
 
-.col-gray{
-    color: rgb(180, 180, 180);
-    font-weight: bold;
-}
-
 .bg-azure{
     background-color: rgb(54, 182, 221);
 }
@@ -78,4 +73,14 @@ main {
 .form-control{
     border: none;
     font-size: 15px;
+}
+
+.arrow-rotate{
+    transform: rotate(45deg);
+}
+
+.input-group button{
+    padding: 10px 20px;
+    border: none;
+    font-size: 20px;
 }
