--- a/css/style.css
+++ b/css/style.css
@@ -110,3 +110,27 @@ main {
     margin-left: 52px;
     margin-top: -15px;
 }
+
+.avatar{
+    width: 40px;
+    border-radius: 50%;
+    margin-top: 5px;
+    margin-left: 6px;
+}
+
+.avatar-name{
+    font-size: small;
+    font-weight: bold;
+    margin-left: 5px;
+    margin-bottom: 0px;
+}
+
+.fa-circle-notch,
+.fa-message,
+.fa-ellipsis-vertical{
+    margin: 5px;
+}
+
+.fa-circle-notch{
+    margin-left: 45%;
+}
