--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ main {
 #right{
     background-color: white;
     width: 100%;
-    height: 500px;
+    height: 100vh;
     border: 1px solid black;
 }
 
@@ -133,4 +133,19 @@ main {
 
 .fa-circle-notch{
     margin-left: 45%;
+}
+
+.access-contact{
+    margin-left: 55px;
+    font-size: 12px;
+    margin-top: -18px;
+}
+
+.contact-section{
+    cursor: pointer;
+    border-bottom: 2px solid rgba(217, 219, 212, 1);
+}
+
+.contact-section:hover{
+    background-color: rgba(217, 219, 212, 1);
 }
