--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ main {
 #right{
     background-color: white;
     width: 100%;
-    height: 100%;
+    height: 700px;
     border: 1px solid black;
 }
 
